<resources>
    <string name="app_name">Coordinación de tutorías Upiicsa</string>
    <string name="text_hint_number_boleta">Número de boleta</string>
    <string name="text_hint_password">Contraseña</string>
    <string name="text_sign_in">iniciar sesión</string>
    <string name="text_sign_up">Registrar</string>
    <string name="title_sign_up">Registro</string>
    <string name="text_instructions_sign_up">Por favor, ingresa la siguiente información</string>
    <string name="text_hint_name_sign_up">Nombre</string>
    <string name="text_hint_last_name_sign_up">Apellido paterno</string>
    <string name="text_hint_mother_last_name_sign_up">Apellido materno</string>
    <string name="text_hint_password_confirm">Confirmar contraseña</string>
    <string name="text_field_required">Campo requerido</string>
    <string name="title_choose_career">Elige tu carrera</string>
    <string name="error_min_length_boleta">El número de boleta consta de 10 digitos</string>
    <string name="error_confirm_password">La confirmación de password no coincide</string>
    <string name="title_news_fragment">Avisos</string>
    <string name="title_search_fragment">Búsqueda de asesorias</string>
    <string name="message_success_sign_up">Te has registrado correctamente!</string>
    <string name="student_not_found">El estudiante con el número de boleta ingresado no existe</string>
    <string name="default_text_career">Lic. Ciencias de la Informática</string>
    <string name="title_welcome">Bienvenido</string>
</resources>
