<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <RelativeLayout
            android:id="@+id/card_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_separation_20"
            android:layout_marginRight="@dimen/big_separation_20"
            android:layout_centerInParent="true">

        <android.support.v7.widget.CardView
                android:id="@+id/card_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/biggest_separation"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/small_separation"
                card_view:cardElevation="0dp"
                card_view:cardUseCompatPadding="false">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/big_separation"
                    android:padding="15dp">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="0dp"
                              android:layout_weight="1"
                              android:orientation="vertical">

                    <TextView
                            android:id="@+id/tv_sign_up_title"
                            style="@style/MultiCurrencyTextParagraph1Black"
                            android:layout_marginTop="2dp"
                            android:text="@string/title_sign_up"/>


                    <TextView android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              style="@style/MultiCurrencyTextParagraph14Black"
                              android:layout_marginTop="@dimen/small_separation_3"
                              android:text="@string/text_instructions_sign_up"/>


                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small_separation"
                            android:hint="@string/text_hint_number_boleta">
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"/>
                    </android.support.design.widget.TextInputLayout>

                    <Spinner android:layout_width="match_parent"
                             android:layout_marginTop="@dimen/small_separation"
                             android:entries="@array/career_types"
                             android:spinnerMode="dialog"
                             style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                             android:layout_height="wrap_content"/>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small_separation"
                            android:hint="@string/text_hint_name_sign_up">
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLength="@integer/max_length_name"/>
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small_separation"
                            android:hint="@string/text_hint_last_name_sign_up">
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLength="@integer/max_length_name"/>
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/small_separation"
                            android:hint="@string/text_hint_mother_last_name_sign_up">
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLength="@integer/max_length_name"/>
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/text_hint_password"
                            android:layout_marginTop="@dimen/small_separation">
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"/>
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/text_hint_password_confirm"
                            android:layout_marginTop="@dimen/small_separation">
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <android.support.design.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_separation"
                        android:text="@string/text_sign_up"
                        style="@style/MultiCurrencyButtonSignInStyle"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_coordinacion_tutorias"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

    </RelativeLayout>


</RelativeLayout>