<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
                name="viewModel"
                type="com.booleansystems.tutorias.ui.login.signin.viewmodel.SignInViewModel"/>
    </data>

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <RelativeLayout
                android:id="@+id/card_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/big_separation_20"
                android:layout_marginRight="@dimen/big_separation_20"
                android:layout_centerInParent="true">

            <androidx.cardview.widget.CardView
                    android:id="@+id/card_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/biggest_separation"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="@dimen/small_separation"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="false">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="50dp"
                        android:padding="24dp">


                    <TextView
                            android:id="@+id/tv_sign_up_title"
                            style="@style/MultiCurrencyTextParagraph1Black"
                            android:layout_marginTop="2dp"
                            android:text="@string/title_welcome"/>


                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/ilBoletaSignIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/text_hint_number_boleta"
                            app:errorEnabled="@{viewModel.errorBoleta}">
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:text="@={viewModel.boleta}"
                        />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/ilPasswordSignIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/text_hint_password"
                            android:layout_marginTop="@dimen/big_separation"
                            app:errorEnabled="@{viewModel.errorPassword}">
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={viewModel.password}"
                                android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                            android:id="@+id/tvSignUp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/big_separation"
                            android:text="@string/text_sign_up"
                            android:textAllCaps="true"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:textAlignment="center"/>

                    <com.google.android.material.button.MaterialButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/normal_separation"
                            android:text="@string/text_sign_in"
                            android:onClick="@{viewModel::onSignUp}"
                            style="@style/MultiCurrencyButtonSignInStyle"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_coordinacion_tutorias"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>

        </RelativeLayout>
    </RelativeLayout>

</layout>

